--- a/game/package.json
+++ b/game/package.json
@@ -9,6 +9,7 @@
     "immer": "^7.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive-modal": "^5.0.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
